# kata-rust

./: Cargo.toml  LICENSE  README.md  run_kata.sh
doc/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md
kata/day01/: hello_rust.rs
kata/day02/: variables.rs
kata/day03/: control_flow.rs
